@@ -12,8 +12,11 @@ import com.intive.patronage22.szczecin.retroboard.exception.NotFoundException;
 import com.intive.patronage22.szczecin.retroboard.model.Board;
 import com.intive.patronage22.szczecin.retroboard.model.BoardCard;
 import com.intive.patronage22.szczecin.retroboard.model.BoardCardAction;
+import com.intive.patronage22.szczecin.retroboard.model.BoardCardVotes;
+import com.intive.patronage22.szczecin.retroboard.model.BoardCardVotesKey;
 import com.intive.patronage22.szczecin.retroboard.model.User;
 import com.intive.patronage22.szczecin.retroboard.repository.BoardCardsRepository;
+import com.intive.patronage22.szczecin.retroboard.repository.BoardCardsVotesRepository;
 import com.intive.patronage22.szczecin.retroboard.repository.BoardRepository;
 import com.intive.patronage22.szczecin.retroboard.repository.UserRepository;
 import com.intive.patronage22.szczecin.retroboard.validation.BoardValidator;
@@ -66,14 +69,17 @@ class BoardServiceTest {
     @MockBean
     UserService userService;
 
+    @MockBean
+    BoardCardsVotesRepository boardCardsVotesRepository;
+
     @Test
     void getUserBoardsShouldReturnSortedListByIdWhenUserExists() {
         //given
         final String uid = "1234";
         final String email = "John@test.pl";
-        final User user = new User(uid, email, "john14", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 0);
-        final var board1 = buildBoard(20, EnumStateDto.CREATED, user, Set.of(), 0);
+        final User user = new User(uid, email, "john14", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 0);
+        final var board1 = TestUtils.buildBoard(20, EnumStateDto.CREATED, user, Set.of(), 0);
         user.setUserBoards(Set.of(board, board1));
 
         //when
@@ -127,15 +133,9 @@ class BoardServiceTest {
         final String email = "Josef@test.pl";
         final String boardName = "My first board.";
 
-        final User user = new User(uid, email, "josef14", Set.of(), Set.of());
+        final User user = new User(uid, email, "josef14", false, Set.of(), Set.of());
 
-        final Board board = Board.builder()
-                .id(10)
-                .name(boardName)
-                .state(EnumStateDto.CREATED)
-                .creator(user)
-                .users(Set.of())
-                .build();
+        final Board board = TestUtils.buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 5);
 
         // when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
@@ -182,7 +182,7 @@ class BoardServiceTest {
         final int boardId = 1;
         final String email = "testemail@example.com";
         final String displayName = "test";
-        final User user = new User("123", email, displayName, Set.of(),Set.of());
+        final User user = new User("123", email, displayName, false, Set.of(), Set.of());
 
         //when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
@@ -199,15 +199,9 @@ class BoardServiceTest {
         final int boardId = 1;
         final String email = "testemail@example.com";
         final String displayName = "test12";
-        final User user = new User("123", email, displayName, Set.of(),Set.of());
-        final User assignUser = new User("1234", "assignUser@test.pl", "test1", Set.of(),Set.of());
-        final Board board = Board.builder()
-                .id(1)
-                .name("board name")
-                .state(EnumStateDto.CREATED)
-                .creator(user)
-                .users(Set.of(assignUser))
-                .boardCards(Set.of()).build();
+        final User user = new User("123", email, displayName, false, Set.of(), Set.of());
+        final User assignUser = new User("1234", "assignUser@test.pl", "test1", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, user, Set.of(assignUser), 5);
 
         //when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
@@ -225,16 +219,10 @@ class BoardServiceTest {
         final int boardId = 1;
         final String email = "testemail@example.com";
         final String displayName = "testDisplayName";
-        final User user = new User("123", email, displayName, Set.of(),Set.of());
-        final User assignUser = new User("1234", "assignUser", "test1", Set.of(),Set.of());
-        final Board board = Board.builder()
-                .id(boardId)
-                .name("board name")
-                .state(EnumStateDto.CREATED)
-                .creator(user)
-                .users(Set.of(assignUser))
-                .boardCards(Set.of()).build();
-        final BoardCard boardCard = new BoardCard
+        final User user = new User("123", email, displayName, false, Set.of(), Set.of());
+        final User assignUser = new User("1234", "assignUser", "test1", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, user, Set.of(assignUser), 5);
+        final BoardCard boardCard =new BoardCard
                 (2, board, "test card name", BoardCardsColumn.SUCCESS, user, List.of());
         final BoardCardAction boardCardAction = new BoardCardAction(4, boardCard, "test action");
         board.setBoardCards(Set.of(boardCard));
@@ -249,14 +237,14 @@ class BoardServiceTest {
         final BoardDataDto boardDataDto = boardService.getBoardDataById(boardId, email);
 
         //then
-        assertEquals(boardDataDto.getBoard().getId(), board.getId());
-        assertEquals(boardDataDto.getBoard().getState(), board.getState());
-        assertEquals(boardDataDto.getBoard().getName(), board.getName());
-        assertEquals(boardDataDto.getBoard().getNumberOfVotes(), board.getMaximumNumberOfVotes());
-        assertEquals(boardDataDto.getColumns().get(0).getName(), BoardCardsColumn.SUCCESS.name());
-        assertEquals(boardDataDto.getColumns().get(0).getId(), BoardCardsColumn.SUCCESS.getColumnId());
-        assertEquals(boardDataDto.getColumns().get(0).getPosition(), BoardCardsColumn.SUCCESS.getColumnId());
-        assertEquals(boardDataDto.getColumns().get(0).getColour(), BoardCardsColumn.SUCCESS.getColour());
+        assertEquals(board.getId(), boardDataDto.getBoard().getId());
+        assertEquals(board.getState(), boardDataDto.getBoard().getState());
+        assertEquals(board.getName(), boardDataDto.getBoard().getName());
+        assertEquals(board.getMaximumNumberOfVotes(), boardDataDto.getBoard().getNumberOfVotes());
+        assertEquals(BoardCardsColumn.SUCCESS.name(), boardDataDto.getColumns().get(0).getName());
+        assertEquals(BoardCardsColumn.SUCCESS.getColumnId(), boardDataDto.getColumns().get(0).getId());
+        assertEquals(BoardCardsColumn.SUCCESS.getColumnId(), boardDataDto.getColumns().get(0).getPosition());
+        assertEquals(BoardCardsColumn.SUCCESS.getColour(), boardDataDto.getColumns().get(0).getColour());
         assertTrue(boardDataDto.getUsers().toString().contains(user.getEmail()));
         assertTrue(boardDataDto.getUsers().toString().contains(user.getUid()));
         assertTrue(boardDataDto.getUsers().toString().contains(assignUser.getEmail()));
@@ -284,7 +272,7 @@ class BoardServiceTest {
         final int boardId = 1;
         final String email = "testemail@example.com";
         final String displayName = "test";
-        final User user = new User("123", email, displayName, Set.of(),Set.of());
+        final User user = new User("123", email, displayName, false, Set.of(), Set.of());
 
         //when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
@@ -301,16 +289,9 @@ class BoardServiceTest {
         final int boardId = 1;
         final String email = "testemail@example.com";
         final String displayName = "test12";
-        final User user = new User("123", email, displayName, Set.of(),Set.of());
-        final User assignUser = new User("1234", "assignUser@test.pl", "test1", Set.of(),Set.of());
-        final Board board = Board.builder()
-                .id(1)
-                .name("board name")
-                .state(EnumStateDto.CREATED)
-                .creator(user)
-                .users(Set.of(assignUser))
-                .boardCards(Set.of())
-                .build();
+        final User user = new User("123", email, displayName, false, Set.of(), Set.of());
+        final User assignUser = new User("1234", "assignUser@test.pl", "test1", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, user, Set.of(assignUser), 5);
 
         //when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
@@ -329,19 +310,16 @@ class BoardServiceTest {
         final String userEmail = "testemail@example.com";
         final String assignedUserEmail = "test@example.com";
         final String displayName = "testDisplayName";
-        final User user = new User("123", userEmail, displayName, Set.of(),Set.of());
-        final User assignedUser = new User("1234", assignedUserEmail, displayName, Set.of(),Set.of());
-        final Board board = Board.builder()
-                .id(boardId)
-                .name("board name")
-                .state(EnumStateDto.CREATED)
-                .creator(user)
-                .users(Set.of(assignedUser))
-                .boardCards(Set.of())
-                .build();
+        final int numberOfUserVotes = 2;
+
+        final User user = new User("123", userEmail, displayName, false, Set.of(), Set.of());
+        final User assignedUser = new User("1234", assignedUserEmail, displayName, false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, user, Set.of(assignedUser), 5);
+
         final BoardCardAction successAction = new BoardCardAction(6, null, "happy");
         final BoardCardAction failureAction = new BoardCardAction(7, null, "help");
         final BoardCardAction kudosAction = new BoardCardAction(8, null, "awesome");
+
         final BoardCard successBoardCard =
                 new BoardCard(3, board, "success", BoardCardsColumn.SUCCESS, user, List.of(successAction));
         final BoardCard failureBoardCard =
@@ -351,39 +329,57 @@ class BoardServiceTest {
         final BoardCard assignedUserCard =
                 new BoardCard(9, board, "success", BoardCardsColumn.SUCCESS, assignedUser, List.of());
 
+        final BoardCardVotes successBoardCardVotes =
+                new BoardCardVotes(new BoardCardVotesKey(successBoardCard.getId(), user.getUid()), successBoardCard,
+                        user, numberOfUserVotes);
+        final BoardCardVotes assignedUserSuccessCardVotes =
+                new BoardCardVotes(new BoardCardVotesKey(successBoardCard.getId(), assignedUser.getUid()),
+                        successBoardCard, assignedUser, numberOfUserVotes);
+
         //when
         when(userRepository.findUserByEmail(userEmail)).thenReturn(Optional.of(user));
         when(boardRepository.findById(boardId)).thenReturn(Optional.of(board));
         when(boardRepository.findBoardByIdAndCreatorOrAssignedUser(boardId, user)).thenReturn(Optional.of(board));
         when(boardCardsRepository.findAllByBoardIdAndCreatorOrderByIdAsc(boardId, user)).thenReturn(
                 List.of(successBoardCard, failureBoardCard, kudosBoardCard));
+        when(boardCardsVotesRepository.getVotesByBoardAndCard(board, successBoardCard)).thenReturn(
+                Optional.of(successBoardCardVotes.getVotes() + assignedUserSuccessCardVotes.getVotes()));
+        when(boardCardsVotesRepository.getVotesByBoardAndCardAndUser(board, successBoardCard, user)).thenReturn(
+                Optional.of(successBoardCardVotes.getVotes()));
 
         final List<BoardDetailsDto> boardDetailsDto = boardService.getBoardDetailsById(boardId, userEmail);
 
         //then
-        assertEquals(boardDetailsDto.get(0).getId(), BoardCardsColumn.SUCCESS.getColumnId());
-        assertEquals(boardDetailsDto.get(0).getBoardCards().get(0).getId(), successBoardCard.getId());
-        assertEquals(boardDetailsDto.get(0).getBoardCards().get(0).getCardText(), successBoardCard.getText());
-        assertEquals(boardDetailsDto.get(0).getBoardCards().get(0).getBoardCardCreator(),
-                successBoardCard.getCreator().getEmail());
-        assertEquals(boardDetailsDto.get(0).getBoardCards().get(0).getActionTexts().get(0),
-                successBoardCard.getBoardCardActions().get(0).getText());
+        assertEquals(BoardCardsColumn.SUCCESS.getColumnId(), boardDetailsDto.get(0).getId());
+        assertEquals(successBoardCard.getId(), boardDetailsDto.get(0).getBoardCards().get(0).getId());
+        assertEquals(successBoardCard.getText(), boardDetailsDto.get(0).getBoardCards().get(0).getCardText());
+        assertEquals(successBoardCard.getCreator().getEmail(),
+                boardDetailsDto.get(0).getBoardCards().get(0).getBoardCardCreator());
+        assertEquals(successBoardCard.getBoardCardActions().get(0).getText(),
+                boardDetailsDto.get(0).getBoardCards().get(0).getActionTexts().get(0));
+        assertEquals(successBoardCardVotes.getVotes() + assignedUserSuccessCardVotes.getVotes(),
+                boardDetailsDto.get(0).getBoardCards().get(0).getVotes());
+        assertEquals(successBoardCardVotes.getVotes(), boardDetailsDto.get(0).getBoardCards().get(0).getUserVotes());
 
-        assertEquals(boardDetailsDto.get(1).getId(), BoardCardsColumn.FAILURES.getColumnId());
-        assertEquals(boardDetailsDto.get(1).getBoardCards().get(0).getId(), failureBoardCard.getId());
-        assertEquals(boardDetailsDto.get(1).getBoardCards().get(0).getCardText(), failureBoardCard.getText());
-        assertEquals(boardDetailsDto.get(1).getBoardCards().get(0).getBoardCardCreator(),
-                failureBoardCard.getCreator().getEmail());
-        assertEquals(boardDetailsDto.get(1).getBoardCards().get(0).getActionTexts().get(0),
-                failureBoardCard.getBoardCardActions().get(0).getText());
+        assertEquals(BoardCardsColumn.FAILURES.getColumnId(), boardDetailsDto.get(1).getId());
+        assertEquals(failureBoardCard.getId(), boardDetailsDto.get(1).getBoardCards().get(0).getId());
+        assertEquals(failureBoardCard.getText(), boardDetailsDto.get(1).getBoardCards().get(0).getCardText());
+        assertEquals(failureBoardCard.getCreator().getEmail(),
+                boardDetailsDto.get(1).getBoardCards().get(0).getBoardCardCreator());
+        assertEquals(failureBoardCard.getBoardCardActions().get(0).getText(),
+                boardDetailsDto.get(1).getBoardCards().get(0).getActionTexts().get(0));
+        assertEquals(0, boardDetailsDto.get(1).getBoardCards().get(0).getVotes());
+        assertEquals(0, boardDetailsDto.get(1).getBoardCards().get(0).getUserVotes());
 
-        assertEquals(boardDetailsDto.get(2).getId(), BoardCardsColumn.KUDOS.getColumnId());
-        assertEquals(boardDetailsDto.get(2).getBoardCards().get(0).getId(), kudosBoardCard.getId());
-        assertEquals(boardDetailsDto.get(2).getBoardCards().get(0).getCardText(), kudosBoardCard.getText());
-        assertEquals(boardDetailsDto.get(2).getBoardCards().get(0).getBoardCardCreator(),
-                kudosBoardCard.getCreator().getEmail());
-        assertEquals(boardDetailsDto.get(2).getBoardCards().get(0).getActionTexts().get(0),
-                kudosBoardCard.getBoardCardActions().get(0).getText());
+        assertEquals(BoardCardsColumn.KUDOS.getColumnId(), boardDetailsDto.get(2).getId());
+        assertEquals(kudosBoardCard.getId(), boardDetailsDto.get(2).getBoardCards().get(0).getId());
+        assertEquals(kudosBoardCard.getText(), boardDetailsDto.get(2).getBoardCards().get(0).getCardText());
+        assertEquals(kudosBoardCard.getCreator().getEmail(),
+                boardDetailsDto.get(2).getBoardCards().get(0).getBoardCardCreator());
+        assertEquals(kudosBoardCard.getBoardCardActions().get(0).getText(),
+                boardDetailsDto.get(2).getBoardCards().get(0).getActionTexts().get(0));
+        assertEquals(0, boardDetailsDto.get(2).getBoardCards().get(0).getVotes());
+        assertEquals(0, boardDetailsDto.get(2).getBoardCards().get(0).getUserVotes());
 
         assertFalse(boardDetailsDto.toString().contains(assignedUserCard.getCreator().getEmail()));
         assertFalse(boardDetailsDto.toString().contains(assignedUserCard.getId().toString()));
@@ -397,16 +393,12 @@ class BoardServiceTest {
         final String userEmail = "testemail@example.com";
         final String assignedUserEmail = "test@example.com";
         final String displayName = "testDisplayName";
-        final User user = new User("123", userEmail, displayName, Set.of(),Set.of());
-        final User assignedUser = new User("1234", assignedUserEmail, displayName, Set.of(), Set.of());
-        final Board board = Board.builder()
-                .id(boardId)
-                .name("board name")
-                .state(EnumStateDto.ACTIONS)
-                .creator(user)
-                .users(Set.of(assignedUser))
-                .boardCards(Set.of())
-                .build();
+        final int numberOfUserVotes = 2;
+
+        final User user = new User("123", userEmail, displayName, false, Set.of(), Set.of());
+        final User assignedUser = new User("1234", assignedUserEmail, displayName, false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.VOTING, user, Set.of(assignedUser), 5);
+
         final BoardCardAction successAction = new BoardCardAction(6, null, "happy");
         final BoardCardAction failureAction = new BoardCardAction(7, null, "help");
         final BoardCardAction kudosAction = new BoardCardAction(8, null, "awesome");
@@ -419,37 +411,62 @@ class BoardServiceTest {
         final BoardCard assignedUserCard =
                 new BoardCard(9, board, "success", BoardCardsColumn.SUCCESS, assignedUser, List.of());
 
+        final BoardCardVotes failureBoardCardVotes =
+                new BoardCardVotes(new BoardCardVotesKey(failureBoardCard.getId(), user.getUid()), failureBoardCard,
+                        user, numberOfUserVotes);
+
         //when
         when(userRepository.findUserByEmail(userEmail)).thenReturn(Optional.of(user));
         when(boardRepository.findById(boardId)).thenReturn(Optional.of(board));
         when(boardRepository.findBoardByIdAndCreatorOrAssignedUser(boardId, user)).thenReturn(Optional.of(board));
         when(boardCardsRepository.findAllByBoardIdOrderByIdAsc(boardId)).thenReturn(
                 List.of(successBoardCard, assignedUserCard, failureBoardCard, kudosBoardCard));
+        when(boardCardsVotesRepository.getVotesByBoardAndCard(board, failureBoardCard)).thenReturn(
+                Optional.of(failureBoardCardVotes.getVotes()));
+        when(boardCardsVotesRepository.getVotesByBoardAndCardAndUser(board, failureBoardCard, user)).thenReturn(
+                Optional.of(failureBoardCardVotes.getVotes()));
 
         final List<BoardDetailsDto> boardDetailsDto = boardService.getBoardDetailsById(boardId, userEmail);
 
         //then
-        assertTrue(boardDetailsDto.toString().contains(String.valueOf(BoardCardsColumn.SUCCESS.getColumnId())));
-        assertTrue(boardDetailsDto.toString().contains(successBoardCard.getId().toString()));
-        assertTrue(boardDetailsDto.toString().contains(successBoardCard.getText()));
-        assertTrue(boardDetailsDto.toString().contains(successBoardCard.getCreator().getEmail()));
-        assertTrue(boardDetailsDto.toString().contains(successBoardCard.getBoardCardActions().get(0).getText()));
+        assertEquals(BoardCardsColumn.SUCCESS.getColumnId(), boardDetailsDto.get(0).getId());
+        assertEquals(successBoardCard.getId(), boardDetailsDto.get(0).getBoardCards().get(0).getId());
+        assertEquals(successBoardCard.getText(), boardDetailsDto.get(0).getBoardCards().get(0).getCardText());
+        assertEquals(successBoardCard.getCreator().getEmail(),
+                boardDetailsDto.get(0).getBoardCards().get(0).getBoardCardCreator());
+        assertEquals(successBoardCard.getBoardCardActions().get(0).getText(),
+                boardDetailsDto.get(0).getBoardCards().get(0).getActionTexts().get(0));
+        assertEquals(0, boardDetailsDto.get(0).getBoardCards().get(0).getVotes());
+        assertEquals(0, boardDetailsDto.get(0).getBoardCards().get(0).getUserVotes());
 
-        assertTrue(boardDetailsDto.toString().contains(assignedUserCard.getId().toString()));
-        assertTrue(boardDetailsDto.toString().contains(assignedUserCard.getText()));
-        assertTrue(boardDetailsDto.toString().contains(assignedUserCard.getCreator().getEmail()));
+        assertEquals(assignedUserCard.getId(), boardDetailsDto.get(0).getBoardCards().get(1).getId());
+        assertEquals(assignedUserCard.getText(), boardDetailsDto.get(0).getBoardCards().get(1).getCardText());
+        assertEquals(assignedUserCard.getCreator().getEmail(),
+                boardDetailsDto.get(0).getBoardCards().get(1).getBoardCardCreator());
+        assertEquals(assignedUserCard.getBoardCardActions(),
+                boardDetailsDto.get(0).getBoardCards().get(1).getActionTexts());
+        assertEquals(0, boardDetailsDto.get(0).getBoardCards().get(1).getVotes());
+        assertEquals(0, boardDetailsDto.get(0).getBoardCards().get(1).getUserVotes());
 
-        assertTrue(boardDetailsDto.toString().contains(String.valueOf(BoardCardsColumn.FAILURES.getColumnId())));
-        assertTrue(boardDetailsDto.toString().contains(failureBoardCard.getId().toString()));
-        assertTrue(boardDetailsDto.toString().contains(failureBoardCard.getText()));
-        assertTrue(boardDetailsDto.toString().contains(failureBoardCard.getCreator().getEmail()));
-        assertTrue(boardDetailsDto.toString().contains(failureBoardCard.getBoardCardActions().get(0).getText()));
+        assertEquals(BoardCardsColumn.FAILURES.getColumnId(), boardDetailsDto.get(1).getId());
+        assertEquals(failureBoardCard.getId(), boardDetailsDto.get(1).getBoardCards().get(0).getId());
+        assertEquals(failureBoardCard.getText(), boardDetailsDto.get(1).getBoardCards().get(0).getCardText());
+        assertEquals(failureBoardCard.getCreator().getEmail(),
+                boardDetailsDto.get(1).getBoardCards().get(0).getBoardCardCreator());
+        assertEquals(failureBoardCard.getBoardCardActions().get(0).getText(),
+                boardDetailsDto.get(1).getBoardCards().get(0).getActionTexts().get(0));
+        assertEquals(failureBoardCardVotes.getVotes(), boardDetailsDto.get(1).getBoardCards().get(0).getVotes());
+        assertEquals(failureBoardCardVotes.getVotes(), boardDetailsDto.get(1).getBoardCards().get(0).getUserVotes());
 
-        assertTrue(boardDetailsDto.toString().contains(String.valueOf(BoardCardsColumn.KUDOS.getColumnId())));
-        assertTrue(boardDetailsDto.toString().contains(kudosBoardCard.getId().toString()));
-        assertTrue(boardDetailsDto.toString().contains(kudosBoardCard.getText()));
-        assertTrue(boardDetailsDto.toString().contains(kudosBoardCard.getCreator().getEmail()));
-        assertTrue(boardDetailsDto.toString().contains(kudosBoardCard.getBoardCardActions().get(0).getText()));
+        assertEquals(BoardCardsColumn.KUDOS.getColumnId(), boardDetailsDto.get(2).getId());
+        assertEquals(kudosBoardCard.getId(), boardDetailsDto.get(2).getBoardCards().get(0).getId());
+        assertEquals(kudosBoardCard.getText(), boardDetailsDto.get(2).getBoardCards().get(0).getCardText());
+        assertEquals(kudosBoardCard.getCreator().getEmail(),
+                boardDetailsDto.get(2).getBoardCards().get(0).getBoardCardCreator());
+        assertEquals(kudosBoardCard.getBoardCardActions().get(0).getText(),
+                boardDetailsDto.get(2).getBoardCards().get(0).getActionTexts().get(0));
+        assertEquals(0, boardDetailsDto.get(2).getBoardCards().get(0).getVotes());
+        assertEquals(0, boardDetailsDto.get(2).getBoardCards().get(0).getUserVotes());
     }
 
     @Test
@@ -476,8 +493,8 @@ class BoardServiceTest {
         final String email = "username@test.pl";
         final int boardId = 1;
         final BoardCard boardCard = new BoardCard();
-        final User userOwner = new User(uidOwner, emailOwner, "displayName", Set.of(),Set.of());
-        final User user = new User(uid, email, "displayName", Set.of(),Set.of());
+        final User userOwner = new User(uidOwner, emailOwner, "displayName", false, Set.of(), Set.of());
+        final User user = new User(uid, email, "displayName", false, Set.of(), Set.of());
         final Board board = new Board(boardId, "board", 0,
                 EnumStateDto.CREATED, userOwner, Set.of(userOwner), Set.of(boardCard));
 
@@ -499,8 +516,8 @@ class BoardServiceTest {
         final String email = "username@test.pl";
         final int boardId = 1;
         final BoardCard boardCard = new BoardCard();
-        final User userOwner = new User(uidOwner, emailOwner, "displayName", Set.of(),Set.of());
-        final User user = new User(uid, email, "displayName", Set.of(), Set.of());
+        final User userOwner = new User(uidOwner, emailOwner, "displayName", false, Set.of(), Set.of());
+        final User user = new User(uid, email, "displayName", false, Set.of(), Set.of());
         final Board board = new Board
                 (boardId, "board", 0,
                         EnumStateDto.CREATED, userOwner, Set.of(userOwner), Set.of(boardCard));
@@ -532,8 +549,8 @@ class BoardServiceTest {
         // given
         final var uid = "uid101";
         final var email = "username@test.pl";
-        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(),3);
+        final var user = new User(uid, email, "displayName", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 3);
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
         final var boardPatchDto = new BoardPatchDto("testboard", 1500);
 
@@ -549,8 +566,8 @@ class BoardServiceTest {
         final var uid = "uid101";
         final var email = "username@test.pl";
         final var boardName = "My first board.";
-        final var userOwner = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.CREATED, userOwner, Set.of(),3);
+        final var userOwner = new User(uid, email, "displayName", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, userOwner, Set.of(), 3);
         final var boardPatchDto = new BoardPatchDto(boardName, 1500);
 
         // when
@@ -570,8 +587,8 @@ class BoardServiceTest {
         // given
         final var uid = "uid101";
         final var email = "username@test.pl";
-        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(),3);
+        final var user = new User(uid, email, "displayName", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 3);
         final var boardPatchDto = new BoardPatchDto(null, 1500);
 
         // when
@@ -608,7 +625,7 @@ class BoardServiceTest {
         final int boardId = 1;
         final List<String> usersEmails = List.of();
         final String email = "testemail@example.com";
-        final User user = new User("123", email, "test name", Set.of(), Set.of());
+        final User user = new User("123", email, "test name", false, Set.of(), Set.of());
 
         //when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
@@ -625,13 +642,13 @@ class BoardServiceTest {
         final int boardId = 1;
         final List<String> usersEmails = List.of();
         final String email = "testemail@example.com";
-        final User user = new User("123", email, "test name", Set.of(), Set.of());
-        final User boardOwner = new User("1234", "testemail1@example.com", "test name", Set.of(), Set.of());
+        final User user = new User("123", email, "test name", false, Set.of(), Set.of());
+        final User boardOwner = new User("1234", "testemail1@example.com", "test name", false, Set.of(), Set.of());
 
         //when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
         when(boardRepository.findById(boardId))
-                .thenReturn(Optional.of(buildBoard(10, EnumStateDto.CREATED, boardOwner, Set.of(),3)));
+                .thenReturn(Optional.of(TestUtils.buildBoard(10, EnumStateDto.CREATED, boardOwner, Set.of(), 3)));
 
         //then
         assertThrows(BadRequestException.class, () -> boardService.assignUsersToBoard(boardId, usersEmails, email));
@@ -645,18 +662,18 @@ class BoardServiceTest {
         final List<String> usersEmails = List.of("testemail@example.com", "testfalseemail@example.com", "test@123.pl");
         final String ownerEmail = "owner@example.com";
         final String displayName = "testDisplayName";
-        final User owner = new User("123", ownerEmail, displayName, Set.of(), Set.of());
-        final User userToAssign = new User("126", usersEmails.get(0), displayName, new HashSet<>(), Set.of());
-        final User existingUser = new User("1234", "test@123.pl", displayName, new HashSet<>(), Set.of());
+        final User owner = new User("123", ownerEmail, displayName, false, Set.of(), Set.of());
+        final User userToAssign = new User("126", usersEmails.get(0), displayName, false, new HashSet<>(), Set.of());
+        final User existingUser = new User("1234", "test@123.pl", displayName, false, new HashSet<>(), Set.of());
         final Set<User> boardUsers = new HashSet<>(List.of(existingUser));
         final List<User> existingUsers = List.of(userToAssign, existingUser);
 
-        final Board board = buildBoard(10, EnumStateDto.CREATED, owner, boardUsers,3);
+        final Board board = TestUtils.buildBoard(10, EnumStateDto.CREATED, owner, boardUsers, 3);
 
         //when
         when(userRepository.findUserByEmail(ownerEmail)).thenReturn(Optional.of(owner));
         when(boardRepository.findById(boardId)).thenReturn(Optional.of(board));
-        when(userRepository.findAllByEmailIn(usersEmails)).thenReturn(existingUsers);
+        when(userRepository.findAllNotDeactivatedByEmailIn(usersEmails)).thenReturn(existingUsers);
         final JSONArray failedEmails = new JSONArray(boardService.assignUsersToBoard(boardId, usersEmails, ownerEmail));
 
         //then
@@ -679,8 +696,8 @@ class BoardServiceTest {
         // given
         final var uid = "1234";
         final var email = "John@test.pl";
-        final var user = new User(uid, email, "john14", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.VOTING, user, Set.of(),3);
+        final var user = new User(uid, email, "john14", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.VOTING, user, Set.of(), 3);
         final var boardPatchDto = new BoardPatchDto("testboard", 1500);
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
@@ -695,8 +712,8 @@ class BoardServiceTest {
         // given
         final var uid = "1234";
         final var email = "John@test.pl";
-        final var user = new User(uid, email, "john14", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(),3);
+        final var user = new User(uid, email, "john14", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 3);
         final var boardPatchDto = new BoardPatchDto("testboard", 1500);
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
@@ -716,10 +733,10 @@ class BoardServiceTest {
         final var email1 = "username@test.pl";
         final var uid2 = "uid102";
         final var email2 = "username2@test.pl";
-        final var user1 = new User(uid1, email1, "displayName1", Set.of(), Set.of());
-        final var user2 = new User(uid2, email2, "displayName2", Set.of(), Set.of());
-        final var boardCreated = buildBoard(10, EnumStateDto.CREATED, user1, Set.of(),3);
-        final var boardAssigned = buildBoard(11, EnumStateDto.CREATED, user2, Collections.singleton(user1),3);
+        final var user1 = new User(uid1, email1, "displayName1", false, Set.of(), Set.of());
+        final var user2 = new User(uid2, email2, "displayName2", false, Set.of(), Set.of());
+        final var boardCreated = TestUtils.buildBoard(10, EnumStateDto.CREATED, user1, Set.of(), 3);
+        final var boardAssigned = TestUtils.buildBoard(11, EnumStateDto.CREATED, user2, Collections.singleton(user1), 3);
         when(userRepository.findUserByEmail(email1)).thenReturn(Optional.of(user1));
         user1.setUserBoards(Collections.singleton(boardAssigned));
         user1.setCreatedBoards(Collections.singleton(boardCreated));
@@ -738,9 +755,9 @@ class BoardServiceTest {
         final String email = "boardOwner@test.pl";
         final Integer boardId = 10;
 
-        final User notAssignedUser = new User(uid, "test@test.com", "some_user", Set.of(), Set.of());
-        final User boardOwner = new User("123", email, "board_owner", Set.of(), Set.of());
-        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(),3);
+        final User notAssignedUser = new User(uid, "test@test.com", "some_user", false, Set.of(), Set.of());
+        final User boardOwner = new User("123", email, "board_owner", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(), 3);
 
         // when
         when(userRepository.findById(uid)).thenReturn(Optional.of(notAssignedUser));
@@ -760,9 +777,9 @@ class BoardServiceTest {
         final String email = "someUser@test.pl";
         final Integer boardId = 10;
 
-        final User notAssignedUser = new User(uid, email, "some_user", Set.of(), Set.of());
-        final User boardOwner = new User("123", "boardOwner@test.pl", "board_owner", Set.of(), Set.of());
-        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(),3);
+        final User notAssignedUser = new User(uid, email, "some_user", false, Set.of(), Set.of());
+        final User boardOwner = new User("123", "boardOwner@test.pl", "board_owner", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(), 3);
 
         // when
         when(userRepository.findById(uid)).thenReturn(Optional.of(notAssignedUser));
@@ -801,9 +818,9 @@ class BoardServiceTest {
         final String email = "currentlyLogged@test.pl";
         final Integer boardId = 10;
 
-        final User boardOwner = new User("123", "boardOwner@test1.com", "board_owner", Set.of(), Set.of());
-        final User userToRemove = new User(uid, "test3@test3.com", "userTest", Set.of(), Set.of());
-        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(userToRemove),3);
+        final User boardOwner = new User("123", "boardOwner@test1.com", "board_owner", false, Set.of(), Set.of());
+        final User userToRemove = new User(uid, "test3@test3.com", "userTest", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(userToRemove), 3);
 
         //when
         when(userRepository.findById(uid)).thenReturn(Optional.of(userToRemove));
@@ -825,8 +842,8 @@ class BoardServiceTest {
         final String email = "boardOwner@test1.com";
         final Integer boardId = 10;
 
-        final User boardOwner = new User(uid, email, "board_owner", Set.of(), Set.of());
-        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(),3);
+        final User boardOwner = new User(uid, email, "board_owner", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(), 3);
 
         //when
         when(userRepository.findById(uid)).thenReturn(Optional.of(boardOwner));
@@ -847,9 +864,9 @@ class BoardServiceTest {
         final String email = "boardOwner@test1.com";
         final Integer boardId = 10;
 
-        final User boardOwner = new User("12345", email, "board_owner", Set.of(), Set.of());
-        final User userToRemove = new User(uid, "test2@test2.com", "userTest", Set.of(), Set.of());
-        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, new HashSet<>(),3);
+        final User boardOwner = new User("12345", email, "board_owner", false, Set.of(), Set.of());
+        final User userToRemove = new User(uid, "test2@test2.com", "userTest", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, boardOwner, new HashSet<>(), 3);
         board.getUsers().add(userToRemove);
 
         //when
@@ -872,9 +889,9 @@ class BoardServiceTest {
         final String email = "currentlyLogged@test.pl";
         final Integer boardId = 10;
 
-        final User boardOwner = new User("12345", "boardOwner@test1.com", "board_owner", Set.of(), Set.of());
-        final User currentlyLogged = new User(uid, email, "currently_logged", Set.of(), Set.of());
-        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, new HashSet<>(),3);
+        final User boardOwner = new User("12345", "boardOwner@test1.com", "board_owner", false, Set.of(), Set.of());
+        final User currentlyLogged = new User(uid, email, "currently_logged", false, Set.of(), Set.of());
+        final Board board = TestUtils.buildBoard(boardId, EnumStateDto.CREATED, boardOwner, new HashSet<>(), 3);
         board.getUsers().add(currentlyLogged);
 
         //when
@@ -891,12 +908,12 @@ class BoardServiceTest {
 
     @Test
     @DisplayName("When setNextState is called - it will change state from CREATED to VOTING (next) and return board details.")
-    void setNextStateChangeStateValueAndSaveTheData()  {
+    void setNextStateChangeStateValueAndSaveTheData() {
         // given
         final var uid = "uid101";
         final var email = "username@test.pl";
-        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 3);
+        final var user = new User(uid, email, "displayName", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 3);
         when(boardRepository.save(any(Board.class))).thenReturn(board);
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
@@ -916,15 +933,15 @@ class BoardServiceTest {
         // given
         final var uid = "uid101";
         final var email = "username@test.pl";
-        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(10,EnumStateDto.DONE, user, Set.of(), 3);
+        final var user = new User(uid, email, "displayName", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.DONE, user, Set.of(), 3);
         when(boardRepository.save(any(Board.class))).thenReturn(board);
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
 
         // when
         final NotAcceptableException exception = assertThrows(
-                NotAcceptableException.class, () -> boardService.setNextState(board.getId(),email));
+                NotAcceptableException.class, () -> boardService.setNextState(board.getId(), email));
 
         // then
         assertEquals("Already in last state", exception.getMessage());
@@ -936,7 +953,7 @@ class BoardServiceTest {
         // given
         final var uid = "uid101";
         final var email = "username@test.pl";
-        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
+        final var user = new User(uid, email, "displayName", false, Set.of(), Set.of());
         final var board_id = 1;
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
         when(boardRepository.findById(board_id)).thenReturn(Optional.empty());
@@ -957,15 +974,15 @@ class BoardServiceTest {
         final var email1 = "username1@test.pl";
         final var uid2 = "uid102";
         final var email2 = "username2@test.pl";
-        final var owner = new User(uid1, email1, "displayName", Set.of(), Set.of());
-        final var user = new User(uid2, email2, "displayName2", Set.of(), Set.of());
-        final var board = buildBoard(10, EnumStateDto.CREATED, owner, Set.of(), 3);
+        final var owner = new User(uid1, email1, "displayName", false, Set.of(), Set.of());
+        final var user = new User(uid2, email2, "displayName2", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, owner, Set.of(), 3);
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
         when(userRepository.findUserByEmail(email2)).thenReturn(Optional.of(user));
 
         // when
         final NotFoundException exception = assertThrows(
-                NotFoundException.class, () -> boardService.setNextState(board.getId(),email2));
+                NotFoundException.class, () -> boardService.setNextState(board.getId(), email2));
 
         // then
         assertEquals("User is not the board owner.", exception.getMessage());
@@ -977,28 +994,17 @@ class BoardServiceTest {
         // given
         final var uid = "uid101";
         final var email = "username@test.pl";
-        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(10,EnumStateDto.CREATED, user, Set.of(),0);
+        final var user = new User(uid, email, "displayName", false, Set.of(), Set.of());
+        final var board = TestUtils.buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 0);
         when(boardRepository.save(any(Board.class))).thenReturn(board);
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
 
         // when
         final BadRequestException exception = assertThrows(
-                BadRequestException.class, () -> boardService.setNextState(board.getId(),email));
+                BadRequestException.class, () -> boardService.setNextState(board.getId(), email));
 
         // then
         assertEquals("Number of votes not set!", exception.getMessage());
-    }
-
-    private Board buildBoard(final int id, final EnumStateDto state, final User user, final Set<User> users, final Integer maximumNumberOfVotes) {
-        return Board.builder()
-                .id(id)
-                .name("My first board.")
-                .state(state)
-                .creator(user)
-                .users(users)
-                .maximumNumberOfVotes(maximumNumberOfVotes)
-                .build();
     }
 }
